<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingHorizontal="15dp">
    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/wallet_tips"
        android:textSize="14sp"
        android:text="@string/please_make_sure_you_have_bound"/>
    <TextView
        android:id="@+id/tv_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/pin"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tips"
        android:textColor="@color/text_color_black"/>
    <com.hjq.shape.view.ShapeEditText
        android:id="@+id/et_pin"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center_vertical"
        android:textColor="@color/text_color_black"
        android:textColorHint="@color/edit_hint"
        android:hint="@string/_6_digits"
        android:textSize="15sp"
        android:paddingHorizontal="15dp"
        android:maxLength="6"
        android:inputType="numberPassword"
        app:shape_strokeSize="1dp"
        app:shape_strokeColor="@color/edit_stroke_normal"
        app:shape_radius="10dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@id/tv_pin"/>
    <TextView
        android:id="@+id/tv_confirm_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_black"
        android:textSize="15sp"
        android:text="@string/confirm_pin"
        app:layout_constraintTop_toBottomOf="@id/et_pin"
        android:layout_marginTop="11dp"/>
    <com.hjq.shape.view.ShapeEditText
        android:id="@+id/et_confirm_pin"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center_vertical"
        android:textColor="@color/text_color_black"
        android:textColorHint="@color/edit_hint"
        android:hint="@string/please_repeat_pin"
        android:maxLength="6"
        android:textSize="15sp"
        android:paddingHorizontal="15dp"
        app:shape_strokeSize="1dp"
        android:inputType="numberPassword"
        app:shape_strokeColor="@color/edit_stroke_normal"
        app:shape_radius="10dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm_pin"/>
    <TextView
        android:id="@+id/tv_tg_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_black"
        android:textSize="15sp"
        android:text="@string/telegram_otp"
        app:layout_constraintTop_toBottomOf="@id/et_confirm_pin"
        android:layout_marginTop="11dp"/>
    <com.hjq.shape.view.ShapeEditText
        android:id="@+id/et_tg_otp"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center_vertical"
        android:textColor="@color/text_color_black"
        android:textColorHint="@color/edit_hint"
        android:hint="@string/enter_otp_code"
        android:textSize="15sp"
        android:paddingHorizontal="15dp"
        app:shape_strokeSize="1dp"
        android:inputType="number"
        app:shape_strokeColor="@color/edit_stroke_normal"
        app:shape_radius="10dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tg_otp"/>
    <com.hjq.shape.view.ShapeButton
        android:id="@+id/btn_send"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:text="@string/send"
        android:gravity="center"
        app:shape_radius="10dp"
        app:shape_solidColor="@color/theme"
        android:textColor="@color/text_color_white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:enabled="false"
        app:shape_solidDisabledColor="@color/btn_disabled"
        app:layout_constraintTop_toTopOf="@id/et_tg_otp"
        app:layout_constraintBottom_toBottomOf="@id/et_tg_otp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"/>
    <com.hjq.shape.view.ShapeButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/confirm"
        android:textColor="@color/text_color_white"
        android:textStyle="bold"
        app:shape_solidColor="@color/theme"
        app:shape_radius="10dp"
        android:gravity="center"
        android:enabled="false"
        app:shape_solidDisabledColor="@color/btn_disabled"
        app:layout_constraintTop_toBottomOf="@id/et_tg_otp"
        android:layout_marginTop="35dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>