<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="15dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_authorize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/text_color_black"
                tools:text="@string/authorize_x"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/tv_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_authorize"
                app:layout_constraintStart_toStartOf="@id/tv_authorize"
                android:textColor="@color/text_color_black"
                android:textSize="15sp"
                android:text="@string/let_up_enjoy_the_work"
                android:lineSpacingExtra="4dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/tv_your_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_phone"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/text_color_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tips"
                android:layout_marginTop="16dp"/>
            <com.hjq.shape.view.ShapeEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                app:shape_radius="10dp"
                android:textSize="15sp"
                android:textColor="@color/text_color_black"
                android:textColorHint="@color/edit_hint"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@id/tv_your_phone"
                android:layout_marginTop="9dp"
                app:shape_strokeSize="1dp"
                app:shape_strokeColor="@color/edit_stroke_normal"
                android:gravity="center_vertical"
                android:paddingHorizontal="15dp"/>
            <TextView
                android:id="@+id/tv_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/text_color_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_phone"
                android:layout_marginTop="11dp"/>
            <com.hjq.shape.view.ShapeEditText
                android:id="@+id/et_pin"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                app:shape_radius="10dp"
                android:textSize="15sp"
                android:textColor="@color/text_color_black"
                android:textColorHint="@color/edit_hint"
                android:hint="@string/_6_digits"
                android:inputType="numberPassword"
                android:maxLength="6"
                app:layout_constraintTop_toBottomOf="@id/tv_pin"
                android:layout_marginTop="9dp"
                android:singleLine="true"
                app:shape_strokeSize="1dp"
                app:shape_strokeColor="@color/edit_stroke_normal"
                android:gravity="center_vertical"
                android:paddingHorizontal="15dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <com.hjq.shape.view.ShapeButton
        android:id="@+id/btn_next"
        style="@style/ButtonStyle"
        android:text="@string/next"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:enabled="false"
        app:shape_solidDisabledColor="@color/btn_disabled"/>
</LinearLayout>