<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:background="@color/white"
    tools:context=".feature.mine.SetPasswordActivity">
    <com.hjq.shape.view.ShapeEditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center_vertical"
        android:textColor="@color/text_color_black"
        android:textColorHint="@color/edit_hint"
        android:hint="@string/phone_number"
        android:textSize="15sp"
        android:paddingHorizontal="15dp"
        android:inputType="number"
        app:shape_strokeSize="1dp"
        app:shape_strokeColor="@color/edit_stroke_normal"
        app:shape_radius="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.hjq.shape.view.ShapeEditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center_vertical"
        android:textColor="@color/text_color_black"
        android:textColorHint="@color/edit_hint"
        android:hint="@string/new_password"
        android:textSize="15sp"
        android:paddingHorizontal="15dp"
        android:inputType="textPassword"
        app:shape_strokeSize="1dp"
        app:shape_strokeColor="@color/edit_stroke_normal"
        app:shape_radius="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_phone"/>
    <com.hjq.shape.view.ShapeEditText
        android:id="@+id/et_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center_vertical"
        android:textColor="@color/text_color_black"
        android:textColorHint="@color/edit_hint"
        android:hint="@string/repeat_password"
        android:textSize="15sp"
        android:paddingHorizontal="15dp"
        android:inputType="textPassword"
        app:shape_strokeSize="1dp"
        app:shape_strokeColor="@color/edit_stroke_normal"
        app:shape_radius="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_new_password"/>
    <com.hjq.shape.view.ShapeEditText
        android:id="@+id/et_otp"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center_vertical"
        android:textColor="@color/text_color_black"
        android:textColorHint="@color/edit_hint"
        android:hint="@string/otp_code"
        android:textSize="15sp"
        android:paddingHorizontal="15dp"
        app:shape_strokeSize="1dp"
        android:inputType="number"
        app:shape_strokeColor="@color/edit_stroke_normal"
        app:shape_radius="10dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@id/et_repeat_password"/>
    <com.hjq.shape.view.ShapeButton
        android:id="@+id/btn_send"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:text="@string/send"
        android:gravity="center"
        app:shape_radius="10dp"
        app:shape_solidColor="@color/theme"
        android:textColor="@color/text_color_white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:enabled="false"
        app:shape_solidDisabledColor="@color/btn_disabled"
        app:layout_constraintTop_toTopOf="@id/et_otp"
        app:layout_constraintBottom_toBottomOf="@id/et_otp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"/>
    <com.hjq.shape.view.ShapeButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/confirm"
        android:textColor="@color/text_color_white"
        android:textStyle="bold"
        app:shape_solidColor="@color/theme"
        app:shape_radius="10dp"
        android:gravity="center"
        android:enabled="false"
        app:shape_solidDisabledColor="@color/btn_disabled"
        app:layout_constraintTop_toBottomOf="@id/et_otp"
        android:layout_marginTop="35dp"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_have_account,tv_sign_in"/>

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_gray"
        android:textSize="12sp"
        android:text="@string/already_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/btn_confirm"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_sign_in"
        app:layout_constraintHorizontal_chainStyle="packed"/>
    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/theme"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/tv_have_account"
        app:layout_constraintBottom_toBottomOf="@id/tv_have_account"
        app:layout_constraintStart_toEndOf="@id/tv_have_account"
        android:text="@string/sign_in"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>