<?xml version="1.0" encoding="utf-8"?>
<com.hjq.shape.layout.ShapeConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:shape_solidColor="@color/white"
    app:shape_radius="15dp"
    android:paddingHorizontal="15dp">
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/order_details"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_black"
        android:textSize="13sp"
        android:text="@string/available_wallet_is_online"
        android:lineSpacingExtra="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:layout_marginTop="10dp"/>

    <com.hjq.shape.view.ShapeButton
        android:id="@+id/btn_close"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:shape_solidColor="@color/white"
        android:paddingHorizontal="12dp"
        android:text="@string/close"
        android:textColor="@color/theme"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</com.hjq.shape.layout.ShapeConstraintLayout>
